    https://github.com/ImageMagick/ImageMagick/issues/1824).
  * Support Fx do() iterator.
  * `magick -size 100x100 xc:black black.pnm` no longer creates a white image
    (reference https://github.com/ImageMagick/ImageMagick/issues/1817).
  * setjmp/longjmp in jpeg.c no longer trigger undefind behavior (reference
    https://imagemagick.org/discourse-server/viewtopic.php?f=3&t=37379).

2020-01-04  7.0.9-14 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.9-14, GIT revision 16654:89ef7ea:20200104.

2020-01-01  7.0.9-14 Cristy  <quetzlzacatenango@image...>
  * Support extended Fx assignment operators (e.g. *=, /=, ++, --, etc.)
  * Support Fx for() iterator.
  * Optimize Fx performance.
  * Ensure circle.rb renders the same for IMv6 and IMv7 (reference
    https://github.com/rmagick/rmagick/issues/905).

2019-12-30  7.0.9-13 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.9-13, GIT revision 16616:dbafe0b:20191230.

2019-12-27  7.0.9-13 Cristy  <quetzlzacatenango@image...>
  * xc:white no longer creates a black PNM image (reference
    https://github.com/ImageMagick/ImageMagick/issues/1817).
  * Sync pixel cache for -kmeans option.
  * Thread -kmeans option.
  * PSD: only set the alpha channel when type is not 0.
  * Fix Lab to custom profile (CMYK or RGB) conversion bug (reference
    https://imagemagick.org/discourse-server/viewtopic.php?f=3&t=37318).

2019-12-26  7.0.9-12 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.9-12, GIT revision 16587:7d6a559:20191226.

2019-12-26  7.0.9-12 Cristy  <quetzlzacatenango@image...>
  * Fix Build failure with MinGW-w64 (reference
    https://github.com/ImageMagick/ImageMagick6/issues/67).
  * Inject image profile properties immediately after the image is read.

2019-12-23  7.0.9-11 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.9-11, GIT revision 16568:1d6c960:20191224.

2019-12-18  7.0.9-11 Cristy  <quetzlzacatenango@image...>