@@ -9,6 +9,8 @@
     (reference https://github.com/ImageMagick/ImageMagick/issues/1817).
   * setjmp/longjmp in jpeg.c no longer trigger undefind behavior (reference
     https://imagemagick.org/discourse-server/viewtopic.php?f=3&t=37379).
+  * Permit compositing in the CMYK colorspace (reference
+    https://imagemagick.org/discourse-server/viewtopic.php?f=3&t=37368).
 
 2020-01-04  7.0.9-14 Cristy  <quetzlzacatenango@image...>
   * Release ImageMagick version 7.0.9-14, GIT revision 16654:89ef7ea:20200104.
